--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Standard colors -->
     <color name="white">#ffffff</color>
     <color name="dim_gray">#727272</color>
     <color name="black">#000000</color>
@@ -8,23 +7,22 @@
     <color name="torch_red">#ff0011</color>
     <color name="forest_green">#228822</color>
     <color name="navy_blue">#0055df</color>
+    <color name="international_orange">#ff5700</color>
 
     <!-- States -->
-    <color name="reddit_orange_full">@color/reddit_orange</color>
     <color name="reddit_orange_lighter">#ffcbb8</color>
-    <color name="reddit_blue_full">@color/reddit_downvote</color>
     <color name="reddit_blue_lighter">#c9c9ff</color>
     <color name="reddit_gold">#f6e600</color>
     <color name="markdown_quote_block">@color/bluegrey000</color>
     <color name="comment_controversiality_indicator">@color/redA200</color>
     <color name="nsfw_tag_color">#d10023</color>
     <color name="link_color">#0000ee</color>
-    <color name="link_saved_color">@color/reddit_blue_full</color>
+    <color name="link_saved_color">@color/reddit_downvote</color>
     <color name="ic_launcher_background">@color/bluegrey000</color>
 
     <!-- reddit color scheme -->
     <!-- https://www.reddit.com/about/alien/ -->
-    <color name="reddit_orange">#ff5700</color>
+    <color name="reddit_orange">@color/international_orange</color>
     <color name="reddit_orangered">#ff4500</color>
     <color name="reddit_upvote">#ff8b60</color>
     <color name="reddit_neutral">#c6c6c6</color>
