--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -97,7 +97,7 @@
                         android:layout_height="@dimen/unread_message_indicator_size"
                         android:layout_gravity="top"
                         android:src="@drawable/ic_email_black_24dp"
-                        android:tint="@color/reddit_orangered" />
+                        android:tint="?attr/unreadMessageIndicatorColor" />
 
                 </LinearLayout>
 
