--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -20,6 +20,7 @@
     <attr name="authorDecoratedTextColor" format="color" />
     <attr name="contentLikedColor" format="color" />
     <attr name="contentDislikedColor" format="color" />
+    <attr name="unreadMessageIndicatorColor" format="color" />
 
     <!-- Link cards -->
     <attr name="cardTopBackgroundColor" format="color" />
