--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -26,6 +26,8 @@
         <item name="contentDislikedColor">@color/reddit_downvote</item>
         <item name="unreadMessageIndicatorColor">@color/orangered</item>
         <item name="cardTopBackgroundColor">@color/white</item>
+        <item name="cardTopBackgroundColorLiked">@color/your_pink</item>
+        <item name="cardTopBackgroundColorDisliked">@color/lavender_blue</item>
         <item name="cardBackgroundAccentColor">?attr/colorPrimaryDark</item>
         <item name="cardTopTextColor">@color/gray900</item>
         <item name="cardTopTextSecondaryColor">?attr/textColorSecondary</item>
@@ -57,6 +59,8 @@
         <item name="contentDislikedColor">@color/reddit_downvote</item>
         <item name="unreadMessageIndicatorColor">@color/orangered</item>
         <item name="cardTopBackgroundColor">@color/gray900</item>
+        <item name="cardTopBackgroundColorLiked">@color/your_pink</item>
+        <item name="cardTopBackgroundColorDisliked">@color/lavender_blue</item>
         <item name="cardBackgroundAccentColor">@color/gray900</item>
         <item name="cardTopTextColor">@color/white</item>
         <item name="cardTopTextSecondaryColor">@color/gray400</item>
