reddit gold color

--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -12,6 +12,7 @@
     <attr name="iconColor" format="color" />
 
     <attr name="nsfwColor" format="color" />
+    <attr name="redditGoldColor" format="color" />
     <attr name="toolbarStyle" format="reference" />
     <attr name="toolbarPopupStyle" format="reference" />
 
