--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -17,6 +17,7 @@
         <item name="dividerColor">@color/black_12pct</item>
         <item name="iconColor">@color/white</item>
         <item name="nsfwColor">@color/nsfw_tag_color</item>
+        <item name="redditGoldColor">@color/golden_yellow</item>
         <item name="toolbarStyle">@style/ToolbarLight</item>
         <item name="toolbarPopupStyle">@style/Theme.AppCompat.Light</item>
         <item name="contentBackgroundColorPrimary">?attr/colorPrimary</item>
@@ -50,6 +51,7 @@
         <item name="dividerColor">@color/white_20pct</item> <!-- 20% white -->
         <item name="iconColor">@color/white</item>
         <item name="nsfwColor">@color/nsfw_tag_color</item>
+        <item name="redditGoldColor">@color/golden_yellow</item>
         <item name="toolbarStyle">@style/ToolbarDark</item>
         <item name="toolbarPopupStyle">@style/Theme.AppCompat</item>
         <item name="contentBackgroundColorPrimary">?attr/colorPrimary</item>
