--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -140,7 +140,7 @@
         android:gravity="start"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="?attr/textColorPrimary"
-        android:textColorLink="@color/link_color"
+        android:textColorLink="?attr/textColorLink"
         android:bufferType="spannable"
         tools:text="Lorem ipsum dolor sit amet"
         tools:ignore="UnusedAttribute" />
