--- a/app/src/main/res/layout/fragment_markdown_text.xml
+++ b/app/src/main/res/layout/fragment_markdown_text.xml
@@ -14,6 +14,6 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="?attr/textColorPrimary"
-        android:textColorLink="@color/link_color" />
+        android:textColorLink="?attr/textColorLink" />
 
 </ScrollView>
