--- a/app/src/main/res/layout/link_comments_stub.xml
+++ b/app/src/main/res/layout/link_comments_stub.xml
@@ -9,7 +9,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="?attr/colorPrimary" />
+        android:background="?attr/contentBackgroundColorPrimary" />
 
     <LinearLayout
         android:id="@+id/comment_item_row"
@@ -20,7 +20,7 @@
 
         <View
             android:id="@+id/indentation"
-            android:background="?attr/colorPrimary"
+            android:background="?attr/contentBackgroundColorPrimary"
             android:layout_width="@dimen/comment_indentation_margin"
             android:layout_height="match_parent" />
 
@@ -31,6 +31,7 @@
             android:gravity="center|center"
             android:textColor="?attr/textColorSecondary"
             android:textSize="@dimen/comment_more_text_size"
+            android:background="?attr/contentBackgroundColorSecondary"
             android:maxLines="1"
             tools:text="view 10 more comments" />
 
