wip - simplify toolbar theming

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,41 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppThemeLight" parent="BaseThemeLight" />
-    <style name="AppThemeDark" parent="BaseThemeDark" />
 
-    <style name="ActivityThemeLightBg" parent="AppThemeLight">
+    <style name="BaseAppTheme" parent="Theme.AppCompat.NoActionBar">
+        <!-- to remove the default action -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item> <!-- For 2.x version -->
+        <item name="android:windowActionModeOverlay">true</item>
+        <!-- app background color -->
+        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
+    </style>
+
+    <style name="AppTheme" parent="BaseAppTheme" />
+
+    <style name="ActivityThemeLightBg" parent="AppTheme">
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="ToolbarLight" parent="BaseThemeLight">
+    <style name="ToolbarStyle" parent="BaseAppTheme">
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="actionMenuTextColor">@color/white</item>
-    </style>
-
-    <style name="ToolbarDark" parent="BaseThemeDark">
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/white</item>
-        <item name="actionMenuTextColor">@color/white</item>
-        <!--<item name="android:background">?attr/colorPrimaryDark</item>-->
-    </style>
-
-    <style name="BaseThemeLight" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- to remove the default action -->
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowActionBar">false</item> <!-- For 2.x version -->
-        <item name="android:windowActionModeOverlay">true</item>
-        <!-- app background color -->
-        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
-    </style>
-
-    <style name="BaseThemeDark" parent="Theme.AppCompat.NoActionBar">
-        <!-- to remove the default action -->
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowActionBar">false</item> <!-- For 2.x version -->
-        <item name="android:windowActionModeOverlay">true</item>
-        <!-- app background color -->
-        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
     </style>
 
     <style name="LinkMetadataTextViewLight">
@@ -72,7 +56,7 @@
         <item name="android:topDark">@color/transparent</item>
     </style>
 
-    <style name="TransparentTheme" parent="BaseThemeLight">
+    <style name="TransparentTheme" parent="BaseAppTheme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
