--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -52,7 +52,14 @@
 
         </LinearLayout>
 
-        <include layout="@layout/comment_layout" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/contentBackgroundColorSecondary">
+
+            <include layout="@layout/comment_layout" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
