--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    card_view:cardBackgroundColor="?attr/cardTopBackgroundColor"
     android:layout_height="wrap_content"
     card_view:cardElevation="@dimen/link_card_elevation"
     card_view:cardUseCompatPadding="true">
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/baseline_spacing">
+            android:padding="@dimen/baseline_spacing"
+            tools:background="?attr/cardTopBackgroundColor">
 
             <TextView
                 android:id="@+id/link_title"
@@ -88,7 +89,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="?attr/cardBackgroundAccentColor"
+                android:background="?attr/contentBackgroundColorSecondary"
                 android:orientation="vertical"
                 android:padding="@dimen/baseline_spacing">
 
@@ -112,10 +113,10 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_toLeftOf="@id/link_timestamp"
-                        android:layout_toStartOf="@id/link_timestamp"
                         android:layout_marginEnd="4dp"
                         android:layout_marginRight="4dp"
+                        android:layout_toLeftOf="@id/link_timestamp"
+                        android:layout_toStartOf="@id/link_timestamp"
                         android:ellipsize="end"
                         android:maxLines="1"
                         tools:text="573 points" />
@@ -140,10 +141,10 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_toLeftOf="@id/link_subreddit"
-                        android:layout_toStartOf="@id/link_subreddit"
                         android:layout_marginEnd="4dp"
-                        android:layout_marginRight="4dp">
+                        android:layout_marginRight="4dp"
+                        android:layout_toLeftOf="@id/link_subreddit"
+                        android:layout_toStartOf="@id/link_subreddit">
 
                         <com.ddiehl.android.htn.view.ColorSwapTextView
                             android:id="@+id/link_author"
