--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -44,7 +44,7 @@
         <item name="colorAccent">@color/redA200</item>
         <!-- Custom attributes -->
         <item name="colorPrimaryLight">@color/gray800</item>
-        <item name="windowBackgroundColor">@color/gray800</item>
+        <item name="windowBackgroundColor">@color/black</item>
         <!-- TODO double-check these text colors are actually to spec -->
         <item name="textColorPrimary">@color/white</item>
         <item name="textColorSecondary">@color/gray300</item>
@@ -59,8 +59,8 @@
         <item name="controversialityIndicatorColor">@color/redA200</item>
         <item name="toolbarStyle">@style/ToolbarStyle</item>
         <item name="toolbarPopupStyle">@style/Theme.AppCompat</item>
-        <item name="contentBackgroundColorPrimary">@color/black</item>
-        <item name="contentBackgroundColorSecondary">@color/gray900</item>
+        <item name="contentBackgroundColorPrimary">@color/gray900</item>
+        <item name="contentBackgroundColorSecondary">@color/gray800</item>
         <item name="authorDecoratedTextColor">@color/white</item>
         <item name="contentLikedColor">@color/international_orange</item>
         <item name="contentDislikedColor">@color/light_slate_blue</item>
