--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <attr name="colorPrimaryLight" format="color" />
+    <attr name="colorPrimaryTextColor" format="color" />
     <attr name="windowBackgroundColor" format="color" />
     <attr name="textColorPrimary" format="color" />
     <attr name="textColorSecondary" format="color" />
